# CatGraph

./: .gitignore  .prettierignore  .prettierrc.json  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
design-source/: README.md
design-source/chats/: chat1.md
design-source/project/: .thumbnail  CatGraph 知识图谱.html  app.jsx  shared.jsx  variant-a-blueprint.jsx  variant-b-stellar.jsx  variant-c-river.jsx
docs/: software-design-style-guide.md
src/: App.vue  main.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  documents.rs  lib.rs  main.rs
src/components/: ActivityBar.vue  ContentArea.vue  SideList.vue  TitleBar.vue
src/composables/: useSnippetPanel.ts
src/constants/: ai-providers.ts  navigation.ts  settings.ts
src/data/: constants.data.ts  equipment.data.ts  experiments.data.ts  knowledge-graph.test.ts  knowledge-graph.ts  nav-side-lists.ts  references.data.ts  results.data.ts
src/models/: document.model.test.ts  document.model.ts  experiment.model.ts  graph.model.ts  registry.ts  snippet.model.test.ts  snippet.model.ts  variable.model.ts
src/router/: index.ts
src/services/: ai-client.service.ts  documents.service.test.ts  documents.service.ts  folders.service.test.ts  folders.service.ts  settings.service.ts  snippets.service.test.ts  snippets.service.ts
src/stores/: document-tabs.store.test.ts  document-tabs.store.ts  documents.store.test.ts  documents.store.ts  folders.store.test.ts  folders.store.ts  (+5 more)
(+72 files in other folders)
