[package]
name = "catgraph"
version = "0.1.0"
description = "CatGraph desktop application"
authors = ["CatGraph"]
edition = "2021"
build = "build.rs"

[lib]
name = "catgraph_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
